added final name tag and Docker file

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,9 @@
 		</dependency>
 	</dependencies>
 
+
 	<build>
+		<finalName>Human-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
